# data-plumber

./: .gitignore  Cargo.toml  README.md  config.json.example
src/: LICENSE.md  README.md  main.rs
src/input/: json.rs  mod.rs  mysql.rs
src/output/: asserts.rs  compare.rs  json.rs  mod.rs  rabbitmq.rs  sql_inserts.rs
src/state/: config.rs  data.rs  factory.rs  mod.rs  state.rs  variant.rs
tests/: input.json
