[package]
name = "data-plumber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version="1.0", features=["preserve_order"] }
serde = { version="1.0", features=["derive"] }
mysql = "*"
itertools = "*"
lapin = "2.3.4"
tracing = "0.1.40"
async-global-executor = "2.4.1"
